--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Bachors</title>
+		<title>Github - Nyekrip - Web Tutorial Indonesia</title>
 		<link type="text/css" rel="stylesheet" href="style.css" />
 		<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="github-feed.js"></script>
 	</head>
 	<body>
 		<div id="page">
-			<h1>Hi! My Name is <a href="http://ibacor.com" target="_BLANK">Bachors</a></h1>
+			<h1>Hi! My Name is <a href="http://ibacor.com" target="_BLANK">Nyekrip</a></h1>
 			<hr>
 			<h2><i class="fa fa-book"></i> My Repository</h2>
 		<div id="ibacor_repos"></div>
