--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div id="page">
-			<h1>Hi! My Name is <a href="http://ibacor.com" target="_BLANK">Nyekrip</a></h1>
+			<h1>Hi! My Website is <a href="http://www.nyekrip.com" target="_BLANK">Nyekrip - Web Tutorial Indonesia</a></h1>
 			<hr>
 			<h2><i class="fa fa-book"></i> My Repository</h2>
 		<div id="ibacor_repos"></div>
@@ -20,15 +20,15 @@
 		<div id="ibacor_gists"></div>
 			<hr>
 				<h2><i class="fa fa-bullhorn"></i> Sosmed</h2>
-					<footer><a class="fa fa-facebook fa-2x" href="https://www.facebook.com/Bachors" target="_blank"></a>
-						<a class="fa fa-twitter fa-2x" href="https://twitter.com/bachors" target="_blank"></a>
-						<a class="fa fa-google-plus fa-2x" href="https://plus.google.com/+bachorstea" target="_blank"></a>
-						<a class="fa fa-linkedin fa-2x" href="http://id.linkedin.com/in/bachors" target="_blank"></a>
-						<a class="fa fa-instagram fa-2x" href="http://instagram.com/bachors" target="_blank"></a>
-						<a class="fa fa-github fa-2x" href="https://github.com/Bachors" target="_blank"></a>
-						<a class="fa fa-codepen fa-2x" href="http://codepen.io/bachors" target="_blank"></a>
+					<footer><a class="fa fa-facebook fa-2x" href="https://www.facebook.com/nyekrip" target="_blank"></a>
+						<a class="fa fa-twitter fa-2x" href="https://twitter.com/nyekrip" target="_blank"></a>
+						<a class="fa fa-google-plus fa-2x" href="https://plus.google.com/+nyekripWeb" target="_blank"></a>
+						<a class="fa fa-linkedin fa-2x" href="http://id.linkedin.com/company/nyekrip" target="_blank"></a>
+						<a class="fa fa-instagram fa-2x" href="http://instagram.com/nyekrip" target="_blank"></a>
+						<a class="fa fa-github fa-2x" href="https://github.com/nyekrip" target="_blank"></a>
+						<a class="fa fa-codepen fa-2x" href="http://codepen.io/nyekrip" target="_blank"></a>
 								<hr>
-			<a href="https://github.com/bachors/bachors.github.io" target="_blank" class="btn"><i class="fa fa-github"></i> Download This Page</a>
+			<a href="https://github.com/nyekrip/nyekrip.github.io" target="_blank" class="btn"><i class="fa fa-github"></i> Download This Page</a>
 						</footer>
 	
 		</div>
