--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Github - Nyekrip - Web Tutorial Indonesia</title>
+		<title>Github Nyekrip - Web Tutorial Indonesia</title>
+		<meta name="description" content="Github Nyekrip adalah Tempat kumpulan Skrip HTML, CSS, JS, PHP yang telah dijelaskan pada tutorial di web www.nyekrip.com."/>		
 		<link type="text/css" rel="stylesheet" href="style.css" />
 		<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="github-feed.js"></script>
@@ -12,6 +13,8 @@
 	<body>
 		<div id="page">
 			<h1>Hi! My Website is <a href="http://www.nyekrip.com" target="_BLANK">Nyekrip - Web Tutorial Indonesia</a></h1>
+			<hr>
+			Github Nyekrip adalah Tempat kumpulan Skrip HTML, CSS, JS, PHP yang telah dijelaskan pada tutorial di web www.nyekrip.com.
 			<hr>
 			<h2><i class="fa fa-book"></i> My Repository</h2>
 		<div id="ibacor_repos"></div>
