--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div id="page">
-			<h1>Hi! My Website is <a href="http://www.nyekrip.com" target="_BLANK">Nyekrip - Web Tutorial Indonesia</a></h1>
+			<h1> <a href="http://www.nyekrip.com" title="Nyekrip Web Tutorial Indonesia" target="_BLANK">Nyekrip - Web Tutorial Indonesia</a></h1>
 			<hr>
 			Github Nyekrip adalah Tempat kumpulan Skrip HTML, CSS, JS, PHP yang telah dijelaskan pada tutorial di web www.nyekrip.com.
 			<hr>
