--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Github Nyekrip - Web Tutorial Indonesia</title>
 		<meta name="description" content="Github Nyekrip adalah Tempat kumpulan Skrip HTML, CSS, JS, PHP yang telah dijelaskan pada tutorial di web www.nyekrip.com."/>		
 		<link type="text/css" rel="stylesheet" href="style.css" />
+		<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 		<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 		<script src="github-feed.js"></script>
 	</head>
