--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Github Nyekrip - Web Tutorial Indonesia</title>
-		<meta name="description" content="Github Nyekrip adalah Tempat kumpulan Skrip HTML, CSS, JS, PHP yang telah dijelaskan pada tutorial di web www.nyekrip.com."/>		
+		<meta name="description" content="Github Nyekrip is a place of collection Scripts HTML, CSS, JS, PHP which has been described in the tutorial on the web www.nyekrip.com."/>		
 		<link type="text/css" rel="stylesheet" href="style.css" />
 		<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 		<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -15,7 +15,7 @@
 		<div id="page">
 			<h1> <a href="http://www.nyekrip.com" title="Nyekrip Web Tutorial Indonesia" target="_BLANK">Nyekrip - Web Tutorial Indonesia</a></h1>
 			<hr>
-			Github Nyekrip adalah Tempat kumpulan Skrip HTML, CSS, JS, PHP yang telah dijelaskan pada tutorial di web www.nyekrip.com.
+			Github Nyekrip is a place of collection Scripts HTML, CSS, JS, PHP which has been described in the tutorial on the web www.nyekrip.com.
 			<hr>
 			<h2><i class="fa fa-book"></i> My Repository</h2>
 		<div id="ibacor_repos"></div>
