--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 				<h2><i class="fa fa-bullhorn"></i> Sosmed</h2>
 					<footer><a class="fa fa-facebook fa-2x" href="https://www.facebook.com/nyekrip" target="_blank"></a>
 						<a class="fa fa-twitter fa-2x" href="https://twitter.com/nyekrip" target="_blank"></a>
-						<a class="fa fa-google-plus fa-2x" href="https://plus.google.com/+NyekripWeb" target="_blank"></a>
+						<a class="fa fa-google-plus fa-2x" href="https://plus.google.com/+NyekripCom" target="_blank"></a>
+						<a class="fa fa-youtube fa-2x" href="https://www.youtube.com/c/nyekripcom" target="_blank"></a>
 						<a class="fa fa-linkedin fa-2x" href="http://id.linkedin.com/company/nyekrip" target="_blank"></a>
 						<a class="fa fa-instagram fa-2x" href="http://instagram.com/nyekrip" target="_blank"></a>
 						<a class="fa fa-github fa-2x" href="https://github.com/nyekrip" target="_blank"></a>
